Changed aaaa to AAAA

--- a/Test 1.ipynb
+++ b/Test 1.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "| Old  | New  |\n",
     "| :--: | :--: |\n",
-    "| aaaa |      |\n",
+    "| AAAA |      |\n",
     "| bbbb |      |\n",
     "| cccc |      |\n",
     "| dddd |      |\n",
