Changed bbbb to BBBB

--- a/Test 1.ipynb
+++ b/Test 1.ipynb
@@ -16,7 +16,7 @@
     "| Old  | New  |\n",
     "| :--: | :--: |\n",
     "| aaaa |      |\n",
-    "| bbbb |      |\n",
+    "| BBBB |      |\n",
     "| cccc |      |\n",
     "| dddd |      |\n",
     "\n"
@@ -47,7 +47,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
