--- a/Test 1.ipynb
+++ b/Test 1.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "| Old  | New  |\n",
     "| :--: | :--: |\n",
-    "| aaaa |      |\n",
+    "| AAAA |      |\n",
     "| BBBB |      |\n",
     "| cccc |      |\n",
     "| dddd |      |\n",
@@ -47,7 +47,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
