--- a/Test 1.ipynb
+++ b/Test 1.ipynb
@@ -18,7 +18,7 @@
     "| AAAA |      |\n",
     "| BBBB |      |\n",
     "| cccc |      |\n",
-    "| dddd |      |\n",
+    "| DDDD |      |\n",
     "\n"
    ]
   },
