Add other content

--- a/Test 1.ipynb
+++ b/Test 1.ipynb
@@ -10,6 +10,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1fb7f552-774a-4149-87e4-1c00ceeedbe8",
+   "metadata": {},
+   "source": [
+    "## Changes without conflicts\n",
+    "\n",
+    "If you make changes on different cells or lines or in different files, there will be no conflicts between your updates and what is found in the 'cloud'. These can easily be resolved by pulling and pushing. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e8b453c1-2ce9-4485-b7ad-8906b968ce98",
    "metadata": {},
    "source": [
@@ -23,9 +33,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7c34b7ec-7aa0-499b-bce9-4d0b10937ef8",
+   "metadata": {},
+   "source": [
+    "## Changes with conflicts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "63a76d59-a905-4750-b263-65271d436922",
+   "metadata": {},
+   "source": [
+    "aaaa bbbb cccc dddd"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4501da5-8f95-4607-b678-d81fe6676b09",
+   "id": "3f873be5-a911-47b5-998d-a15a927101ee",
    "metadata": {},
    "outputs": [],
    "source": []
